--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,11 @@ body {
    display: flex;
    align-items: center;
    font-weight: 500;
+   margin: 10px 0 0 0;
+}
+
+.load {
+   margin: 0;
 }
 
 #result-count__number {
